--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sistema de Controle Financeiro em React com TypeScript"
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     
